Change image paths to relative URLs
Updated image paths to relative URLs for better portability.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="menu-grid">
             <div class="menu-card">
                 <div class="menu-image">
-                    <img src="C:\Joff\BFF Entrep\Pics\Nasi Goreng.png" alt="Fried Rice">
+                    <img src="Pics/Tehbeng.png" alt="Fried Rice">
                 </div>
                 <div class="menu-info">
                     <h3 class="menu-name">Nasi Goreng</h3>
@@ -33,7 +33,7 @@
 
             <div class="menu-card">
                 <div class="menu-image">
-                    <img class="popiahz" src="C:\Joff\BFF Entrep\Pics\Popiah.png" alt="Popiah">
+                    <img class="popiahz" src="Pics/Popiah.png" alt="Popiah">
                 </div>
                 <div class="menu-info">
                     <h3 class="menu-name">Popiah</h3>
@@ -44,7 +44,7 @@
 
             <div class="menu-card">
                 <div class="menu-image">
-                    <img src="C:\Joff\BFF Entrep\Pics\Dimsum.png" alt="Dim Sum">
+                    <img src="Pics\Dimsum.png" alt="Dim Sum">
                 </div>
                 <div class="menu-info">
                     <h3 class="menu-name">Dim Sum</h3>
@@ -55,7 +55,7 @@
 
             <div class="menu-card">
                 <div class="menu-image">
-                    <img src="C:\Joff\BFF Entrep\Pics\Limauice.png" alt="Limau Ice">
+                    <img src="Pics\Limauice.png" alt="Limau Ice">
                 </div>
                 <div class="menu-info">
                     <h3 class="menu-name">Limau Ice</h3>
@@ -66,7 +66,7 @@
 
             <div class="menu-card">
                 <div class="menu-image">
-                    <img src="C:\Joff\BFF Entrep\Pics\Tehbeng.png" alt="Teh Beng">
+                    <img src="Pics\Tehbeng.png" alt="Teh Beng">
                 </div>
                 <div class="menu-info">
                     <h3 class="menu-name">Teh Beng</h3>
@@ -77,7 +77,7 @@
 
             <div class="menu-card">
                 <div class="menu-image">
-                    <img src="C:\Joff\BFF Entrep\Pics\Milodino.png" alt="Milo Overload">
+                    <img src="Pics\Milodino.png" alt="Milo Overload">
                 </div>
                 <div class="menu-info">
                     <h3 class="menu-name">Milo Overload</h3>
@@ -104,3 +104,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
