Fix HTML formatting and update image paths

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="menu-grid">
             <div class="menu-card">
                 <div class="menu-image">
-                    <img src="Pics/Tehbeng.png" alt="Fried Rice">
+                    <img src="Pics/Nasi Goreng.png" alt="Fried Rice">
                 </div>
                 <div class="menu-info">
                     <h3 class="menu-name">Nasi Goreng</h3>
@@ -104,4 +104,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
