--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <body>
     <header class="header">
         <div class="header-content">
+            <!-- Logo Image - Replace 'logo.png' with your actual logo file -->
+            <img src="Pics/logo.png" alt="Blast from the Flavors Logo" class="logo">
+            
             <h1 class="business-name">Blast from the Flavors</h1>
             <p class="subtitle">Malaysian Street Food</p>
             <p class="description">Comfort food with a Malaysian twist</p>
@@ -19,7 +22,7 @@
     <main class="menu-section">
         <h2 class="section-title">Our Menu</h2>
 
-       <div class="menu-grid">
+        <div class="menu-grid">
             <div class="menu-card">
                 <div class="menu-image">
                     <img src="Pics/Nasi Goreng.png" alt="Fried Rice">
@@ -44,7 +47,7 @@
 
             <div class="menu-card">
                 <div class="menu-image">
-                    <img src="Pics\Dimsum.png" alt="Dim Sum">
+                    <img src="Pics/Dimsum.png" alt="Dim Sum">
                 </div>
                 <div class="menu-info">
                     <h3 class="menu-name">Dim Sum</h3>
@@ -55,7 +58,7 @@
 
             <div class="menu-card">
                 <div class="menu-image">
-                    <img src="Pics\Limauice.png" alt="Limau Ice">
+                    <img src="Pics/Limauice.png" alt="Limau Ice">
                 </div>
                 <div class="menu-info">
                     <h3 class="menu-name">Limau Ice</h3>
@@ -66,7 +69,7 @@
 
             <div class="menu-card">
                 <div class="menu-image">
-                    <img src="Pics\Tehbeng.png" alt="Teh Beng">
+                    <img src="Pics/Tehbeng.png" alt="Teh Beng">
                 </div>
                 <div class="menu-info">
                     <h3 class="menu-name">Teh Beng</h3>
@@ -77,7 +80,7 @@
 
             <div class="menu-card">
                 <div class="menu-image">
-                    <img src="Pics\Milodino.png" alt="Milo Overload">
+                    <img src="Pics/Milodino.png" alt="Milo Overload">
                 </div>
                 <div class="menu-info">
                     <h3 class="menu-name">Milo Overload</h3>
