Update menu prices for various items

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <div class="menu-info">
                     <h3 class="menu-name">Nasi Goreng</h3>
                     <p class="menu-description">Flavorful fried rice with vegetables and your choice of protein</p>
-                    <p class="menu-price">₱80</p>
+                    <p class="menu-price">₱20</p>
                 </div>
             </div>
 
@@ -76,7 +76,7 @@
                 <div class="menu-info">
                     <h3 class="menu-name">Popiah</h3>
                     <p class="menu-description">Fresh spring rolls filled with vegetables and sweet sauce</p>
-                    <p class="menu-price">₱60</p>
+                    <p class="menu-price">₱15</p>
                 </div>
             </div>
 
@@ -87,7 +87,7 @@
                 <div class="menu-info">
                     <h3 class="menu-name">Dim Sum</h3>
                     <p class="menu-description">Assorted steamed dumplings with dipping sauce</p>
-                    <p class="menu-price">₱65</p>
+                    <p class="menu-price">₱10</p>
                 </div>
             </div>
 
@@ -98,7 +98,7 @@
                 <div class="menu-info">
                     <h3 class="menu-name">Limau Ice</h3>
                     <p class="menu-description">Refreshing iced lime drink, perfect for hot days</p>
-                    <p class="menu-price">₱35</p>
+                    <p class="menu-price">₱15</p>
                 </div>
             </div>
 
@@ -109,7 +109,7 @@
                 <div class="menu-info">
                     <h3 class="menu-name">Teh Beng</h3>
                     <p class="menu-description">Traditional Malaysian iced milk tea</p>
-                    <p class="menu-price">₱40</p>
+                    <p class="menu-price">₱39 - 49</p>
                 </div>
             </div>
 
@@ -120,7 +120,7 @@
                 <div class="menu-info">
                     <h3 class="menu-name">Milo Overload</h3>
                     <p class="menu-description">Extra creamy Milo drink topped with Milo powder</p>
-                    <p class="menu-price">₱45</p>
+                    <p class="menu-price">₱49 - 59</p>
                 </div>
             </div>
         </div>
