Update image source for Teh Beng menu item

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
             <div class="menu-card">
                 <div class="menu-image">
-                    <img src="Pics/Tehbeng.png" alt="Teh Beng">
+                    <img src="Pics/Tehbengz.png" alt="Teh Beng">
                 </div>
                 <div class="menu-info">
                     <h3 class="menu-name">Teh Beng</h3>
